<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.maequise</groupId>
    <artifactId>hibernate-profiler</artifactId>
    <version>0.2.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Hibernate profiler (Bill of Materials)</name>
    <description>Hibernate Profiler (Bill of Materials)</description>
    <url>https://github.com/maequise/hibernate-profiler</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://opensource.org/license/apache-2-0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>maequise</id>
            <organization>Zenika</organization>
            <name>Tahitoa MERLIN</name>
            <email>tahitoa.merlin@gmail.com</email>
            <timezone>Europe/Paris</timezone>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/maequise/hibernate-profiler.git</connection>
        <developerConnection>scm:git:git@github.com:maequise/hibernate-profiler.git</developerConnection>
        <url>https://github.com/maequise/hibernate-profiler</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>hibernate-profiler-core</module>
        <module>hibernate-profiler-spring</module>
    </modules>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <datasource.proxy>1.10.1</datasource.proxy>
        <!-- spring version -->
        <spring.version>7.0.0</spring.version>
        <spring.boot.version>4.0.0</spring.boot.version>
        <!-- hibernate version -->
        <hibernate.version>7.1.8.Final</hibernate.version>
        <!-- test versions -->
        <junit.version>6.0.1</junit.version>
        <mockito.version>5.20.0</mockito.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- project dependencies -->
            <dependency>
                <groupId>io.github.maequise</groupId>
                <artifactId>hibernate-profiler-core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.maequise</groupId>
                <artifactId>hibernate-profiler-spring</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.maequise</groupId>
                <artifactId>hibernate-profiler-tests</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>net.ttddyy</groupId>
                <artifactId>datasource-proxy</artifactId>
                <version>${datasource.proxy}</version>
            </dependency>

            <!-- spring dependencies -->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-autoconfigure</artifactId>
                <version>${spring.boot.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- hibernate dependencies -->
            <dependency>
                <groupId>org.hibernate.orm</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${hibernate.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- test dependencies -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>net.ttddyy</groupId>
            <artifactId>datasource-proxy</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>local</id>
            <modules>
                <module>hibernate-profiler-tests</module>
            </modules>
        </profile>
        <profile>
            <id>sonar</id>
            <properties>
                <sonar.organization>maequise</sonar.organization>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>0.8.14</version>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>report</id>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                                <configuration>
                                    <formats>
                                        <format>XML</format>
                                    </formats>
                                </configuration>
                            </execution>
                            <execution>
                                <id>report-aggregate</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>report-aggregate</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.12.0</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.3</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>

                        <configuration>
                            <gpgArguments>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                    </plugin>

                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.4.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                            <tokenAuth>true</tokenAuth>
                            <autoPublish>true</autoPublish>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>


</project>
